@@ -21,7 +21,6 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import com.google.auto.value.AutoValue;
 
-import java.util.Collections;
 import java.util.Set;
 
 @AutoValue
@@ -30,6 +29,7 @@ public abstract class FieldTypeDTO {
     static final String FIELD_NAME = "field_name";
     static final String FIELD_PHYSICAL_TYPE = "physical_type";
     static final String FIELD_PROPERTIES = "properties";
+    static final String FIELD_STREAMS = "streams";
 
     public enum Properties {
         FIELDDATA
@@ -43,6 +43,9 @@ public abstract class FieldTypeDTO {
 
     @JsonProperty(FIELD_PROPERTIES)
     public abstract Set<Properties> properties();
+
+    @JsonProperty(FIELD_STREAMS)
+    public abstract Set<String> streams();
 
     public static FieldTypeDTO create(String fieldName, String physicalType) {
         return builder().fieldName(fieldName).physicalType(physicalType).build();
@@ -67,7 +70,8 @@ public abstract class FieldTypeDTO {
         @JsonCreator
         public static Builder create() {
             return new AutoValue_FieldTypeDTO.Builder()
-                    .properties(Collections.emptySet());
+                    .properties(Set.of())
+                    .streams(Set.of());
         }
 
         @JsonProperty(FIELD_NAME)
@@ -78,6 +82,9 @@ public abstract class FieldTypeDTO {
 
         @JsonProperty(FIELD_PROPERTIES)
         public abstract Builder properties(Set<Properties> properties);
+
+        @JsonProperty(FIELD_STREAMS)
+        public abstract Builder streams(Set<String> streams);
 
         public abstract FieldTypeDTO build();
     }
